Typo in Markdown

--- a/notebook/1_analyse_preliminaire_data_excel.ipynb
+++ b/notebook/1_analyse_preliminaire_data_excel.ipynb
@@ -38,9 +38,9 @@
     " - ```BIS SR``` \n",
     " - ```DC``` \n",
     " - ```SvO2 (m)```\n",
-    " - ```ET Des.````\n",
+    " - ```ET Des.```\n",
     " - ```FIN2O```\n",
-    " - ```FR(ecg)````\n"
+    " - ```FR(ecg)```\n"
    ]
   },
   {
