Fix notebook 1 to have acces to read_data functions

--- a/notebook/1_analyse_preliminaire_new_data_excel.ipynb
+++ b/notebook/1_analyse_preliminaire_new_data_excel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "sys.path.append('../')\n",
     "from config import *\n",
-    "from read_data import read_xls_files, fill_unknow_col_in_df"
+    "from data.read_data import read_xls_files, fill_unknow_col_in_df"
    ]
   },
   {
