Del print in config.py. Update notebook to be reusable with new Class Parser.

--- a/etudes/engineering/notebook/1_analyse_preliminaire_new_data_excel.ipynb
+++ b/etudes/engineering/notebook/1_analyse_preliminaire_new_data_excel.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sys\n",
+    "import os\n",
     "\n",
     "pd.set_option('display.max_columns', None)"
    ]
@@ -44,30 +45,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append('../')\n",
-    "from config import *\n",
-    "from read_data import read_xls_files, fill_unknow_col_in_df"
+    "root_path = os.path.dirname(os.path.dirname(os.path.dirname(os.getcwd())))\n",
+    "scripts_path = os.path.join(root_path, 'scripts')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/babou/github/batch_5_transplant/scripts/config\n",
+      "/Users/babou/github/batch_5_transplant/scripts/config\n"
+     ]
+    }
+   ],
    "source": [
-    "df1 = read_xls_files(DATA_ORIGINAL+'Bloc1D4G.xls')\n",
-    "df2 = read_xls_files(DATA_ORIGINAL+'Bloc2D4G.xls')\n",
-    "df3 = read_xls_files(DATA_ORIGINAL+'Bloc3D4G.xls')\n",
-    "df4 = read_xls_files(DATA_ORIGINAL+'Bloc4D4G.xls')"
+    "sys.path.append(scripts_path)\n",
+    "sys.path.append(root_path)\n",
+    "from scripts.parser import Parser"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser = Parser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = parser.read_xls_files('../../../data/original_data/machines/Bloc1D4G.xls')\n",
+    "df2 = parser.read_xls_files('../../../data/original_data/machines/Bloc2D4G.xls')\n",
+    "df3 = parser.read_xls_files('../../../data/original_data/machines/Bloc3D4G.xls')\n",
+    "df4 = parser.read_xls_files('../../../data/original_data/machines/Bloc4D4G.xls')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +400,7 @@
        "5     1      1      0      0.0  97.0       0.0   0.0  0.0         329   5:52  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +715,7 @@
        "5     0      0      0      0.0     0         0   0.0   0         349   9:03  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1046,7 @@
        "10074   7:14  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1066,7 @@
        "(64496, 38)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,11 +1084,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_full.to_csv(DATA_CLEAN+'clean_Bloc_files.csv', index=False, encoding='utf-8')"
+    "df_full.to_csv('../../../data/clean_data/clean_Bloc_files.csv', index=False, encoding='utf-8')"
    ]
   },
   {
@@ -1071,35 +1100,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DATA_DIR = '../data/original_data/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Bloc1D4G\n",
-    "df1 = pd.read_excel(DATA_DIR+'Bloc1D4G.xls')\n",
+    "df1 = pd.read_excel('../../../data/original_data/machines/Bloc1D4G.xls')\n",
     "#df1 = df1.dropna(subset=['Unnamed: 0'])\n",
     "# Bloc2D4G\n",
-    "df2 = pd.read_excel(DATA_DIR+'Bloc2D4G.xls')\n",
+    "df2 = pd.read_excel('../../../data/original_data/machines/Bloc2D4G.xls')\n",
     "#df2 = df2.dropna(subset=['Unnamed: 0'])\n",
     "# Bloc3D4G\n",
-    "df3 = pd.read_excel(DATA_DIR+'Bloc3D4G.xls')\n",
+    "df3 = pd.read_excel('../../../data/original_data/machines/Bloc3D4G.xls')\n",
     "#df3 = df3.dropna(subset=['Unnamed: 0'])\n",
     "# Bloc4D4G\n",
-    "df4 = pd.read_excel(DATA_DIR+'Bloc4D4G.xls')"
+    "df4 = pd.read_excel('../../../data/original_data/machines/Bloc4D4G.xls')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1288,7 @@
        "1        0    0   0         NaN         NaN         NaN         NaN  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1462,7 @@
        "1     0      0       0    0    0   0         NaN  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1453,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1622,7 +1642,7 @@
        "1        0    0   0         NaN         NaN         NaN         NaN  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1633,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1822,7 @@
        "1        0    0   0         NaN         NaN         NaN         NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1820,7 +1840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1831,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1840,7 +1860,7 @@
        "(21593, 38)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1851,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2155,7 +2175,7 @@
        "4    0   0         NaN         NaN         NaN         NaN  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2166,7 +2186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2177,7 +2197,7 @@
        "       304., 308.])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2188,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2197,7 +2217,7 @@
        "23"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2215,7 +2235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2384,7 +2404,7 @@
        "2         NaN         NaN         NaN         NaN  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2406,7 +2426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2717,7 +2737,7 @@
        "1691           0         NaN         NaN  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2743,7 +2763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2754,7 +2774,7 @@
        "Name: Temp, dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2766,7 +2786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3077,7 +3097,7 @@
        "6223        0          93           0           0           0  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3103,7 +3123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -4502,7 +4522,7 @@
        "21035       NaN         NaN         NaN         NaN         NaN  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4516,7 +4536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {
     "scrolled": false
    },
@@ -4688,7 +4708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4701,11 +4721,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_excel(DATA_DIR+'Bloc1D4G.xls')\n",
+    "df1 = pd.read_excel('../../../data/original_data/machines/Bloc1D4G.xls')\n",
     "# Renaming columns\n",
     "df1.rename(columns={'Unnamed: 0':'id_patient'}, inplace=True)\n",
     "df1.rename(columns={'Unnamed: 1':'time'}, inplace=True)"
@@ -4713,7 +4733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4723,7 +4743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -4754,7 +4774,7 @@
        " 308.0]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4765,7 +4785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4775,7 +4795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4791,7 +4811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4833,7 +4853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -5137,7 +5157,7 @@
        "5     1      1      0      0.0  97.0       0.0   0.0  0.0       329.0   5:52  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5155,7 +5175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -5466,7 +5486,7 @@
        "3687  15:35  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5482,7 +5502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -5609,7 +5629,7 @@
        "2863         NaN  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5621,7 +5641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -5925,7 +5945,7 @@
        "3687         NaN         NaN         NaN         NaN  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5940,7 +5960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -6251,7 +6271,7 @@
        "18126   2:28  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6267,7 +6287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -6394,7 +6414,7 @@
        "10314         NaN         NaN  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6406,7 +6426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -6710,7 +6730,7 @@
        "18126    0  NaN         NaN         NaN         NaN         NaN  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
