--- a/etudes/engineering/notebook/IY - Engineering - Création automatique des tables de dimensions.ipynb
+++ b/etudes/engineering/notebook/IY - Engineering - Création automatique des tables de dimensions.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,212 +29,6 @@
      "text": [
       "/Users/yanni-benoit-iyeze/Documents/Data For Good/batch_5_transplant/data/original_data/patient-donor/\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>numero</th>\n",
-       "      <th>date_transplantation</th>\n",
-       "      <th>heure_arrivee_bloc</th>\n",
-       "      <th>pathologie</th>\n",
-       "      <th>age</th>\n",
-       "      <th>sexe</th>\n",
-       "      <th>Poids</th>\n",
-       "      <th>Taille</th>\n",
-       "      <th>other_organ_transplantation</th>\n",
-       "      <th>super_urgence</th>\n",
-       "      <th>...</th>\n",
-       "      <th>P_F_H0</th>\n",
-       "      <th>PGD_H0</th>\n",
-       "      <th>P_F_end_surgery</th>\n",
-       "      <th>PGD_end_surgery</th>\n",
-       "      <th>time_last_PF</th>\n",
-       "      <th>PDG_h24</th>\n",
-       "      <th>PGD_h48</th>\n",
-       "      <th>PGD3</th>\n",
-       "      <th>date_de_deces</th>\n",
-       "      <th>Survival_days_27_10_2018</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2012-01-05</td>\n",
-       "      <td>03:00:00</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>241.538</td>\n",
-       "      <td>E</td>\n",
-       "      <td>210.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>192.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>2463</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2012-01-08</td>\n",
-       "      <td>03:15:00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>165.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NF</td>\n",
-       "      <td>NF</td>\n",
-       "      <td>304.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>158.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>2461</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2012-01-11</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>173.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>103.75</td>\n",
-       "      <td>E</td>\n",
-       "      <td>222.0</td>\n",
-       "      <td>E</td>\n",
-       "      <td>141.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>2457</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2012-01-15</td>\n",
-       "      <td>07:20:00</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>152.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>286</td>\n",
-       "      <td>2</td>\n",
-       "      <td>453.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2016-02-22</td>\n",
-       "      <td>1499</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2012-01-17</td>\n",
-       "      <td>12:15:00</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>330</td>\n",
-       "      <td>1</td>\n",
-       "      <td>192.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>124.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>2451</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 285 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   numero date_transplantation heure_arrivee_bloc  pathologie   age  sexe  \\\n",
-       "0     1.0           2012-01-05           03:00:00         3.0  49.0   0.0   \n",
-       "1     2.0           2012-01-08           03:15:00         1.0  42.0   1.0   \n",
-       "2     3.0           2012-01-11           13:30:00         1.0  22.0   1.0   \n",
-       "3     4.0           2012-01-15           07:20:00         2.0  57.0   0.0   \n",
-       "4     5.0           2012-01-17           12:15:00         2.0  49.0   0.0   \n",
-       "\n",
-       "   Poids  Taille  other_organ_transplantation  super_urgence  \\\n",
-       "0   68.0   160.0                          0.0            0.0   \n",
-       "1   49.0   165.0                          0.0            0.0   \n",
-       "2   51.0   173.0                          0.0            0.0   \n",
-       "3   65.0   152.0                          0.0            0.0   \n",
-       "4   50.0   160.0                          0.0            0.0   \n",
-       "\n",
-       "             ...              P_F_H0  PGD_H0  P_F_end_surgery PGD_end_surgery  \\\n",
-       "0            ...             241.538       E            210.0               2   \n",
-       "1            ...                  NF      NF            304.0               1   \n",
-       "2            ...              103.75       E            222.0               E   \n",
-       "3            ...                 286       2            453.0               1   \n",
-       "4            ...                 330       1            192.0               3   \n",
-       "\n",
-       "   time_last_PF  PDG_h24  PGD_h48 PGD3 date_de_deces  Survival_days_27_10_2018  \n",
-       "0         192.0      1.0      1.0  1.0           NaT                      2463  \n",
-       "1         158.0      0.0      0.0  0.0           NaT                      2461  \n",
-       "2         141.0      1.0      0.0  1.0           NaT                      2457  \n",
-       "3         102.0      0.0      0.0  0.0    2016-02-22                      1499  \n",
-       "4         124.0      1.0      1.0  1.0           NaT                      2451  \n",
-       "\n",
-       "[5 rows x 285 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -242,12 +36,60 @@
     "\n",
     "path_to_data = DATA_ORIGINAL_PATIENT\n",
     "\n",
-    "files = glob.glob('{}*.xlsx'.format(path_to_data))\n",
-    "\n",
-    "df = pd.read_excel(files[0])\n",
-    "\n",
-    "df.head()"
+    "files = glob.glob('{}*.xlsx'.format(path_to_data))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['patient_preoperatoire', 'donneur', 'patient_intraoperatoire', 'patient_postoperatoire'])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file = pd.ExcelFile(files[0])\n",
+    "sheets = file.sheet_names\n",
+    "output = {}\n",
+    "for sheet in sheets:\n",
+    "    if sheet not in ['ensemble', 'glossaire']:\n",
+    "        df = pd.read_excel(files[0], sheet, index_col=None)\n",
+    "        if sheet != 'donneur':\n",
+    "            sheet = '{}_{}'.format('patient', sheet)        \n",
+    "        info = {\n",
+    "        sheet : list(df.columns.values)\n",
+    "        }\n",
+    "        output.update(info)\n",
+    "DIM_MAP_FIELDS = output\n",
+    "output.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name, array in DIM_MAP_FIELDS.items():\n",
+    "    df = df[df.columns.intersection(array)]\n",
+    "    filename = os.path.join('', 'dim_{}.csv'.format(name))\n",
+    "    df.to_csv(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
