ajout etendue et normalités avec json

--- a/notebook/Analysis_Haemodynamic.ipynb
+++ b/notebook/Analysis_Haemodynamic.ipynb
@@ -1520,25 +1520,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_cat(df, 'df', 'features_haemodynamic.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cond = pd.read_json('features_haemodynamic.json').transpose()\n",
+    "\n",
+    "cond['etendue_min'] = cond['etendue'].map(lambda x: x[0])\n",
+    "cond['etendue_max'] = cond['etendue'].map(lambda x: x[1])\n",
+    "cond['norm_min'] = cond['normalite'].map(lambda x: x[0])\n",
+    "cond['norm_max'] = cond['normalite'].map(lambda x: x[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'features_haemodynamic.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-34-77368f548fdf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfeatures_cat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'fct_haemodynamic'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'features_haemodynamic.json'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-33-91800054c7ee>\u001b[0m in \u001b[0;36mfeatures_cat\u001b[0;34m(df, dataset_name, path)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m     \u001b[0mconditions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mconditions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-33-91800054c7ee>\u001b[0m in \u001b[0;36mget_json\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"features.json\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m     \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0;32mreturn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'features_haemodynamic.json'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>etendue</th>\n",
+       "      <th>name</th>\n",
+       "      <th>normalite</th>\n",
+       "      <th>etendue_min</th>\n",
+       "      <th>etendue_max</th>\n",
+       "      <th>norm_min</th>\n",
+       "      <th>norm_max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>dc</th>\n",
+       "      <td>[0, 10]</td>\n",
+       "      <td>dc_cat</td>\n",
+       "      <td>[2, 5]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fc</th>\n",
+       "      <td>[0, 220]</td>\n",
+       "      <td>fc_cat</td>\n",
+       "      <td>[50, 90]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>220</td>\n",
+       "      <td>50</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>papdia</th>\n",
+       "      <td>[0, 65]</td>\n",
+       "      <td>papdia_cat</td>\n",
+       "      <td>[14, 35]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>14</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>papmoy</th>\n",
+       "      <td>[0, 65]</td>\n",
+       "      <td>papmoy_cat</td>\n",
+       "      <td>[20, 35]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>20</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>papsys</th>\n",
+       "      <td>[0, 120]</td>\n",
+       "      <td>papsys_cat</td>\n",
+       "      <td>[25, 40]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>25</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pasd</th>\n",
+       "      <td>[0, 65]</td>\n",
+       "      <td>pasd_cat</td>\n",
+       "      <td>[14, 35]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>14</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pasm</th>\n",
+       "      <td>[0, 65]</td>\n",
+       "      <td>pasm_cat</td>\n",
+       "      <td>[20, 35]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>20</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pass</th>\n",
+       "      <td>[0, 320]</td>\n",
+       "      <td>pass_cat</td>\n",
+       "      <td>[80, 140]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>320</td>\n",
+       "      <td>80</td>\n",
+       "      <td>140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pnid</th>\n",
+       "      <td>[0, 65]</td>\n",
+       "      <td>pnid_cat</td>\n",
+       "      <td>[14, 35]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>14</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pnim</th>\n",
+       "      <td>[0, 65]</td>\n",
+       "      <td>pnim_cat</td>\n",
+       "      <td>[20, 35]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>20</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pnis</th>\n",
+       "      <td>[0, 320]</td>\n",
+       "      <td>pnis_cat</td>\n",
+       "      <td>[80, 140]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>320</td>\n",
+       "      <td>80</td>\n",
+       "      <td>140</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         etendue        name  normalite  etendue_min  etendue_max  norm_min  \\\n",
+       "dc       [0, 10]      dc_cat     [2, 5]            0           10         2   \n",
+       "fc      [0, 220]      fc_cat   [50, 90]            0          220        50   \n",
+       "papdia   [0, 65]  papdia_cat   [14, 35]            0           65        14   \n",
+       "papmoy   [0, 65]  papmoy_cat   [20, 35]            0           65        20   \n",
+       "papsys  [0, 120]  papsys_cat   [25, 40]            0          120        25   \n",
+       "pasd     [0, 65]    pasd_cat   [14, 35]            0           65        14   \n",
+       "pasm     [0, 65]    pasm_cat   [20, 35]            0           65        20   \n",
+       "pass    [0, 320]    pass_cat  [80, 140]            0          320        80   \n",
+       "pnid     [0, 65]    pnid_cat   [14, 35]            0           65        14   \n",
+       "pnim     [0, 65]    pnim_cat   [20, 35]            0           65        20   \n",
+       "pnis    [0, 320]    pnis_cat  [80, 140]            0          320        80   \n",
+       "\n",
+       "        norm_max  \n",
+       "dc             5  \n",
+       "fc            90  \n",
+       "papdia        35  \n",
+       "papmoy        35  \n",
+       "papsys        40  \n",
+       "pasd          35  \n",
+       "pasm          35  \n",
+       "pass         140  \n",
+       "pnid          35  \n",
+       "pnim          35  \n",
+       "pnis         140  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "features_cat(df, 'fct_haemodynamic', 'features_haemodynamic.json')"
+    "cond"
    ]
   },
   {
@@ -1546,7 +1733,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def plot_haemodynamic(id_patient):\n",
+    "    print('Displaying haemodynamic measures for patient # {}'.format(id_patient))\n",
+    "    g = sns.FacetGrid(df_melt[df_melt['id_patient'] == id_patient], col=\"variable\", col_wrap=4, sharey=False)\n",
+    "    g = g.map(plt.plot, \"timestamp\", \"value\")"
+   ]
   },
   {
    "cell_type": "markdown",
